Lets see what this Readme looks like...

--- a/AESRand/AESRand/AESRand.vcxproj.filters
+++ b/AESRand/AESRand/AESRand.vcxproj.filters
@@ -26,5 +26,8 @@
     <ClCompile Include="AESRand.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="others.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
