Simplifying the example code a bit, explaining how to use it more in the Readme. Set default to -march=westmere for maximum compatibility (Intel CPUs since 2010)

--- a/AESRand_Linux/Makefile
+++ b/AESRand_Linux/Makefile
@@ -1,7 +1,10 @@
 all: AESRand.s AESRand
 
+clean:
+	rm AESRand.s AESRand
+
 AESRand.s: AESRand.cpp
-	g++ -march=haswell -O2 -S AESRand.cpp -o AESRand.s
+	g++ -march=westmere -O2 -S AESRand.cpp -o AESRand.s
 
 AESRand: AESRand.cpp
-	g++ -march=haswell -O2 AESRand.cpp -o AESRand
+	g++ -march=westmere -O2 AESRand.cpp -o AESRand
