BigCrush test written. SmallCrush and Crush have passed. BigCrush is estimated to take 8-hours. I'll upload the results once they're done.

--- a/AESRand_Linux/Makefile
+++ b/AESRand_Linux/Makefile
@@ -1,10 +1,13 @@
-all: AESRand.s AESRand
+all: AESRand.s AESRand AESRand_BigCrush
 
 clean:
-	rm AESRand.s AESRand
+	rm AESRand.s AESRand AESRand_BigCrush
 
 AESRand.s: AESRand.cpp
 	g++ -march=westmere -O2 -S AESRand.cpp -o AESRand.s
 
 AESRand: AESRand.cpp
 	g++ -march=westmere -O2 AESRand.cpp -o AESRand
+
+AESRand_BigCrush: AESRand_BigCrush.cpp
+	g++ -march=westmere -O2 AESRand_BigCrush.cpp -o AESRand_BigCrush -ltestu01
