--- a/AESRand_Paper/Makefile
+++ b/AESRand_Paper/Makefile
@@ -4,10 +4,10 @@ clean:
 	rm AESRand.s AESRand AESRand.o UnitTest
 
 AESRand.s: AESRand.cpp
-	g++ -march=westmere -O2 -S AESRand.cpp -o AESRand.s
+	g++ -mcrypto -O0 -S AESRand.cpp -o AESRand.s
 
 AESRand.o: AESRand.cpp
-	g++ -c -march=westmere -O2 AESRand.cpp -o AESRand.o
+	g++ -g -c -mcrypto -O0 AESRand.cpp -o AESRand.o
 
 UnitTest: UnitTest.cpp AESRand.o
-	g++ -march=westmere -O2 UnitTest.cpp AESRand.o -o UnitTest
+	g++ -g -mcrypto -O0 UnitTest.cpp AESRand.o -o UnitTest
