Setting up makefile for x86 and power9

--- a/AESRand_Paper/Makefile.power9
+++ b/AESRand_Paper/Makefile.power9
@@ -4,10 +4,10 @@ clean:
 	rm AESRand.s AESRand AESRand.o UnitTest
 
 AESRand.s: AESRand.cpp
-	g++ -maes -S AESRand.cpp -o AESRand.s
+	g++ -mcrypto -O0 -S AESRand.cpp -o AESRand.s
 
 AESRand.o: AESRand.cpp
-	g++ -g -c -maes AESRand.cpp -o AESRand.o
+	g++ -g -c -mcrypto -O0 AESRand.cpp -o AESRand.o
 
 UnitTest: UnitTest.cpp AESRand.o
-	g++ -g -maes UnitTest.cpp AESRand.o -o UnitTest
+	g++ -g -mcrypto -O0 UnitTest.cpp AESRand.o -o UnitTest
